--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                     <li><a href="#about">About Us</a></li>
                     <li><a href="#menu">Menu</a></li>
                 </ul>
-                <div class="nav-actions">
+                <!-- <div class="nav-actions">
                     <button class="mobile-menu-btn">
                         <i class="fas fa-bars"></i>
                     </button>
-                </div>
+                </div> -->
             </div>
         </nav>
 
