updated card styles

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                     <span class="ceo-tag">Founder & CEO</span>
                     <h3>ABHAY M C</h3>
                     <p>"Bringing the authentic taste of Kerala to your homes. Every spoonful is a quality tradition."</p>
-                    <a href="https://wa.me/7591924935" target="_blank" class="msg-btn">Message Me</a>
+                    <a href="https://wa.me/+91 62387 69415" target="_blank" class="msg-btn">Message Me</a>
                 </div>
             </div>
         </section>
